# mac-tag-sync

./: README.md  package.json  setup.cfg  setup.py
scripts/: tag-sync
