# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-tag-sync
version = 2019.6.7
url = https://github.com/looking-for-a-job/mac-tag-sync
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tag finder

[options]
install_requires =
	setuptools
scripts =
	scripts/tag-sync
